fixes with loading config and prep work for publish on vsmp

--- a/VSDiscordRP.csproj
+++ b/VSDiscordRP.csproj
@@ -103,6 +103,7 @@
     </VSCTCompile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Resources\discord_logo.png" />
     <Content Include="Resources\SettingsIcon.png" />
   </ItemGroup>
   <ItemGroup>
